FIX: Update footer alignment to use space-between for better layout for "Suivez-nous"

--- a/src/components/shared/footer/Footer.module.css
+++ b/src/components/shared/footer/Footer.module.css
@@ -81,12 +81,12 @@
     .rightSide {
       display: flex;
       flex: 1;
-      justify-content: flex-end;
+      justify-content: space-between;
 
       .bottomTitle {
         color: gray;
         font-size: 0.8em;
-        font-weight: 600; 
+        font-weight: 600;
       }
 
       .socials {
